welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: not found: value fleur
def transitionPot(){gauche();avance();avance();droite();avance();avance();avance();avance();avance();avance();fleur(Color.blue);avance();gauche();avance();avance();droite()}
                                                                                                              ^FlowerCase:6: error: not found: value growFlowers1
def growFlowers(){growFlowers1()
                  ^FlowerCase:8: error: not found: value growFlowers1
growFlowers1()
^FlowerCase:10: error: not found: value growflowers1
growflowers1()
^FlowerCase:12: error: not found: value growFlowers1
                  growFlowers1()}
                  ^