welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def transitionPot(){gauche();avance();avance();droite();avance();avance();avance();avance();avance();avance();fleur(Color.blue);avance();gauche();avance();avance();droite()}
def transition2()
{gauche();recule();droite();recule();recule();recule();recule();recule();recule();recule();recule();gauche();recule();recule();recule();droite()}


def growFlowers(){growFlowers1()
transitionPot()
growFlowers1()
transition2()
growflowers1()
transitionPot()
                  growFlowers1()}
